[fix] image overflow container overlapping with buttons

--- a/app/assets/stylesheets/main_backoffice.scss
+++ b/app/assets/stylesheets/main_backoffice.scss
@@ -212,6 +212,12 @@ summary .rpush {
 }
 
 // ---------------------------------------------------------------- image upload
+.card-img-top img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover; //contain;
+}
+
 .upload {
   border: 0px;
 }
